SONAR-32132 Fix SSF-1132