@@ -19,13 +19,15 @@
  */
 package org.sonar.server.webhook.ws;
 
-import com.google.common.collect.ImmutableList;
 import com.tngtech.java.junit.dataprovider.DataProvider;
 import com.tngtech.java.junit.dataprovider.DataProviderRunner;
 import com.tngtech.java.junit.dataprovider.UseDataProvider;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.SocketException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 import okhttp3.HttpUrl;
 import org.junit.Before;
 import org.junit.Test;
@@ -33,6 +35,7 @@ import org.junit.runner.RunWith;
 import org.sonar.api.config.Configuration;
 import org.sonar.server.network.NetworkInterfaceProvider;
 import org.sonar.server.user.UserSession;
+import org.sonar.server.webhook.WebhookAddressValidator;
 
 import static java.util.Optional.of;
 import static org.assertj.core.api.Assertions.assertThatCode;
@@ -54,13 +57,8 @@ public class WebhookSupportTest {
       {"https://248.235.76.254/some_webhook"},
       {"https://248.235.76.254:8454/some_webhook"},
 
-      // local addresses are allowed too
-      {"https://192.168.0.1/some_webhook"},
-      {"https://192.168.0.1:8888/some_webhook"},
-      {"https://10.15.15.15/some_webhook"},
-      {"https://10.15.15.15:7777/some_webhook"},
-      {"https://172.16.16.16/some_webhook"},
-      {"https://172.16.16.16:9999/some_webhook"},
+      // leading-zero octets are parsed as decimal (not octal) by the JVM, so this is just a regular public address, not a loopback bypass
+      {"https://0177.0.0.1/some_webhook"},
     };
   }
 
@@ -74,7 +72,53 @@ public class WebhookSupportTest {
       {"https://localhost/some_webhook"},
       {"https://localhost:9999/some_webhook"},
       {"https://192.168.1.21/"},
+
+      // decimal-integer notation for 127.0.0.1
+      {"https://2130706433/some_webhook"},
     };
+  }
+
+  @DataProvider
+  public static Object[][] linkLocalAndMulticastUrls() {
+    return new Object[][] {
+      // link-local range including the cloud provider metadata endpoint (AWS/Azure/GCP)
+      {"https://169.254.169.254/latest/meta-data/"},
+      {"https://169.254.0.1/some_webhook"},
+      {"https://[fe80::1]/some_webhook"},
+
+      // multicast
+      {"https://224.0.0.1/some_webhook"},
+    };
+  }
+
+  @DataProvider
+  public static Object[][] cloudMetadataUrls() {
+    return new Object[][] {
+      // AWS IMDS over IPv6 - unique-local address, not caught by isLinkLocalAddress()
+      {"https://[fd00:ec2::254]/latest/meta-data/"},
+      // Alibaba Cloud metadata - RFC 6598 shared address space, not caught by any InetAddress predicate
+      {"https://100.100.100.200/latest/meta-data/"},
+    };
+  }
+
+  @DataProvider
+  public static Object[][] siteLocalUrls() {
+    return new Object[][] {
+      // RFC 1918 private-network ranges
+      {"https://10.15.15.15/some_webhook"},
+      {"https://10.15.15.15:7777/some_webhook"},
+      {"https://172.16.16.16/some_webhook"},
+      {"https://172.16.16.16:9999/some_webhook"},
+      {"https://192.168.0.1/some_webhook"},
+      {"https://192.168.0.1:8888/some_webhook"},
+    };
+  }
+
+  @DataProvider
+  public static Object[][] blockedUrls() {
+    return Stream.of(loopbackUrls(), linkLocalAndMulticastUrls(), cloudMetadataUrls(), siteLocalUrls())
+      .flatMap(Arrays::stream)
+      .toArray(Object[][]::new);
   }
 
   @Before
@@ -82,7 +126,7 @@ public class WebhookSupportTest {
     InetAddress inetAddress = InetAddress.getByName(HttpUrl.parse("https://192.168.1.21/").host());
 
     when(networkInterfaceProvider.getNetworkInterfaceAddresses())
-      .thenReturn(ImmutableList.of(inetAddress));
+      .thenReturn(List.of(inetAddress));
   }
 
 
@@ -93,16 +137,16 @@ public class WebhookSupportTest {
   }
 
   @Test
-  @UseDataProvider("loopbackUrls")
-  public void checkUrlPatternFailsForLoopbackAddress(String url) {
+  @UseDataProvider("blockedUrls")
+  public void checkUrlPatternFailsForBlockedAddress(String url) {
     assertThatThrownBy(() -> underTest.checkUrlPattern(url, "msg"))
       .isInstanceOf(IllegalArgumentException.class)
-      .hasMessage("Invalid URL: loopback and wildcard addresses are not allowed for webhooks.");
+      .hasMessage(WebhookAddressValidator.INVALID_ADDRESS_MESSAGE);
   }
 
   @Test
-  @UseDataProvider("loopbackUrls")
-  public void checkUrlPatternSuccessfulForLoopbackAddressWhenSonarValidateWebhooksPropertyDisabled(String url) {
+  @UseDataProvider("blockedUrls")
+  public void checkUrlPatternSuccessfulForBlockedAddressWhenSonarValidateWebhooksPropertyDisabled(String url) {
     when(configuration.getBoolean("sonar.validateWebhooks")).thenReturn(of(false));
 
     assertThatCode(() -> underTest.checkUrlPattern(url, "msg")).doesNotThrowAnyException();
